# ero_snow_removal

./: .gitignore  AUTHORS  LICENSE  README.md  plot_outremont.py  pyproject.toml  requirements.txt
data/: README.md  outremont_edges.csv
demo/: demo.py  demo_live.py
docs/: model.md
notebooks/: 01_data_preparation.ipynb  02_drone_optimization.ipynb
rapport/: rapport.md
scripts/: make_mini_sector.py  prepare_data.sh  run_demo.py  run_drone.sh  setup_env.sh
src/: carp_mvp.py  demo_Cha.py  demo_carp_showcase.py  run_all.py
src/cost/: fleet_eval.py
src/data/: prepare_data.py
src/drone/: model.py  solve.py
tests/: test_demo.py
