[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ero-snow-removal"
version = "0.1.0"
description = "Optimisation drone + VRP pour déneigement"
requires-python = ">=3.10"
authors = [
  { name = "Votre Nom" },
]
dependencies = [
  "networkx>=3.3",
  "osmnx>=2.0",
  "geopandas>=0.14"
]

[tool.setuptools.packages.find]
where = ["src"]
